fixed positioning of grid sizing of teams, now 1st grid box wraps around image

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -93,8 +93,9 @@ body::-webkit-scrollbar-thumb{
   display: grid;
   column-gap: 1rem;
   row-gap: 1rem;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: auto 1fr;
   padding-bottom: 5%;
+  
 }
 
 /* .twoByTwo2{ 
